--- a/requirements.in
+++ b/requirements.in
@@ -2,4 +2,5 @@ django
 djangorestframework
 psycopg[binary]
 python-dotenv
-djangorestframework-simplejwtrequire
+djangorestframework-simplejwt
+drf-spectacular
